--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
       android:supportsRtl="true">
          <meta-data
        android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyD8iGWbHXNUpJXNa7SK8UOrSG02uNXtPLs"/>
+      android:value="Api_key"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
